Fix button wrap

--- a/app/assets/stylesheets/lights.scss
+++ b/app/assets/stylesheets/lights.scss
@@ -56,15 +56,36 @@ body{
 
 #button-actions {
   display: flex;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
 }
 
 .bar-button {
   flex-grow: 1;
+  flex-basis: 20%;
   margin: 3px;
+  white-space: nowrap;
 }
 
 #it-logo {
   width: 6.25rem;
   float: right;
+}
+
+.btn {
+	color: #1c1c1c !important;
+}
+
+input[type=range] {
+  border: none !important;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  background: #5f5f5f !important;
+}
+
+input[type=range]::-moz-range-thumb {
+  background: #5f5f5f !important;
+}
+input[type=range]::-ms-thumb {
+  background: #5f5f5f !important;
 }
